<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.SettingsFragment">

    <TextView
        android:id="@+id/tv_settings"
        style="@style/settings_text_view_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_theme_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_settings">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_main_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_theme_text" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_red_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_theme_text" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_blue_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_theme_text" />


    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_ok"
        style="@style/settings_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rb_group" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_cancel"
        style="@style/settings_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toEndOf="@id/button_ok"
        app:layout_constraintTop_toTopOf="@id/button_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>